# LearningC-

./: CMakeLists.txt  README.md  main.cpp
advanced_functions/: function_parameters.cpp  function_parameters.h
functions/: functions.cpp  functions.h  void_functions.cpp  void_functions.h
helpers/: helper.cpp  helper.h
simple_math/: return_five.cpp  return_five.h  simple_math.cpp  simple_math.h
